--- a/.settings.yaml
+++ b/.settings.yaml
@@ -1,7 +1,7 @@
 id: "455344917049245696"
-name: special
+name: basic example
 createdAt: 2024-06-10T12:18:08.125Z
-updatedAt: 2024-06-11T07:03:57.280Z
+updatedAt: 2024-06-11T11:47:16.566Z
 createdBy: z1XXwZGkdCiw5KmtXXawBB1LfkzQcdmszz9
 updatedBy: z1XXwZGkdCiw5KmtXXawBB1LfkzQcdmszz9
 temperature: 1
